data/derived/fa15/progs/unify/prog3064.ml.out
Characters 25-37:
  let rec clone x n = pipe stringOfList x n;;
                           ^^^^^^^^^^^^
Error: This expression has type ('a -> string) -> 'a list -> string
       but an expression was expected of type (('b -> 'c) -> 'b -> 'c) list
